# tact

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  suggested_ollama_models.md
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c02d24f00be_drop_time_code_description_keywords_.py  2e1d8609b084_add_projects_and_time_code_project_id.py  342356b8e3e0_merge_multiple_heads.py  64619729f440_.py  8809038f19d7_rename_time_entry_fields.py  930ed8fe7fa7_remove_project_description.py  a3c3608e750f_add_parse_notes.py  e782e1b1289d_initial_schema.py  f79f252be3d6_add_context_documents.py
backend/src/tact/: main.py
backend/src/tact/db/: __init__.py  base.py  migrations.py  models.py  session.py
backend/src/tact/llm/: __init__.py  anthropic.py  ollama.py  parser.py  prompts.py  provider.py
backend/src/tact/rag/: __init__.py  embeddings.py  retrieval.py
backend/src/tact/routes/: context.py  entries.py  projects.py  time_codes.py  work_types.py
backend/src/tact/schemas/: __init__.py  context.py  entry.py  project.py  time_code.py  work_type.py
backend/src/tact/utils/: duration.py
backend/src/tact/worker/: __init__.py  parser_worker.py
backend/tests/: conftest.py  test_context.py  test_db.py  test_duration.py  test_entries.py  test_health.py  test_llm_parser.py  test_projects.py  test_rag.py  test_reparse.py  test_time_codes.py  test_work_types.py
mcp/: Dockerfile  README.md  pyproject.toml
mcp/src/tact_mcp/: __init__.py  client.py  server.py
(+273 files in other folders)
